Changed to swift 3

--- a/Recipez/Recipez/Base.lproj/Main.storyboard
+++ b/Recipez/Recipez/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wgA-4V-QhO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2553a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wgA-4V-QhO">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -125,14 +125,14 @@
                                     <color key="titleColor" red="1" green="0.40302034129999997" blue="0.09436345065" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="addImage:" destination="nHu-Fo-Pzi" eventType="touchUpInside" id="f5e-N9-eCi"/>
+                                    <action selector="addImageWithSender:" destination="nHu-Fo-Pzi" eventType="touchUpInside" id="VeA-bP-Y1Q"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FcX-tD-8Yi">
                                 <frame key="frameInset" minX="252" minY="466" width="97" height="30"/>
                                 <state key="normal" title="Create Recipe"/>
                                 <connections>
-                                    <action selector="createRecipe:" destination="nHu-Fo-Pzi" eventType="touchUpInside" id="TCg-V4-sK9"/>
+                                    <action selector="createRecipeWithSender:" destination="nHu-Fo-Pzi" eventType="touchUpInside" id="MZ7-bb-2wV"/>
                                 </connections>
                             </button>
                         </subviews>
